fix: enhance form buttons spacing

--- a/src/app/pages/employees/employee-details/employee-details.component.scss
+++ b/src/app/pages/employees/employee-details/employee-details.component.scss
@@ -80,6 +80,7 @@
       display: flex;
       justify-content: center;
       justify-content: space-around;
+      gap: 1rem;
 
       button {
         width: min(300px, 100%);
